# mesh-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WORKBLOCK_HANDOFF.md  WORKBLOCK_HANDOFF_CROSS_REPO_20260403.md  WORKBLOCK_HANDOFF_IMAGE_LANE_ACTIVATION_20260407.md  WORKBLOCK_HANDOFF_IMAGE_TRUTH_REBASELINE_20260408.md  WORKBLOCK_HANDOFF_MR_MW_RUNTIME_TRUTH_20260408.md  WORKBLOCK_HANDOFF_MR_READINESS_20260407.md  WORKBLOCK_HANDOFF_RECERT_BASELINE_20260408.md  WORKBLOCK_TODOS_LIVE_RUNTIME_CACHE_20260415.md  get_lane_info.py  pyproject.toml
docs/: MR-LIVE-CERTIFICATION.md  PUBLICATION-HYGIENE.md
evidence/: frontdesk-tag-first-20260410.md
k8s/: README.md  mesh-router-secret.example.yaml  mesh-router-secret.sealed.yaml  mesh-router-secret.sealed.yaml.example  mesh-router.yaml
mesh_router/: __init__.py  app.py  archive_inventory.py  cli.py  config.py  db.py  inventory.py  lease_store.py  logging_config.py  meshbench.py  mw_commands.py  mw_consumer.py  mw_control.py  mw_grpc.py  mw_overlay.py  perf_registry.py  probe.py  request_store.py  route_resolver.py  router.py  runtime_state.py  scanner_utils.py  schemas.py  sync.py  tokens.py  viability.py  worker_inventory.py
scripts/: autodeploy.sh  build_image.sh  certify_mr.py  check_public_hygiene.sh  k8s_deploy_mesh_router.sh  k8s_verify_deploy_hygiene.sh  mw_command_smoke.py  mw_stream_smoke.py  packserv_autodeploy.sh
sql/: 001_init.sql  002_lane_model_aliases.sql  003_metrics_columns.sql  004_dynamic_models.sql  005_router_lease_heartbeat.sql  006_model_tuning_profiles.sql  008_router_requests.sql  (+7 more)
(+49 files in other folders)
