[project]
name = "mesh-router"
version = "0.1.0"
description = "Local OpenAI-compatible router for mesh worker lanes (LiteLLM replacement)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "psutil>=5.9",
]

[project.scripts]
mesh-router = "mesh_router.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mesh_router"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
